This is ChangeLog Wed Jun 20 10:47:21 MDT 2001

rxtx-1.5 and rxtx-1.4 changes are kept in the same file.  skip to the version
you downloaded.

1.5-5  Jun 28, 2001   Merged with rxtx-1.4
		      More work on Mac OS X port
		      Joseph Goldstone <joseph@lp.com>
		      minor cleanups
1.5-4  Jan 26, 2001   Irix build fixes (still needs CFLAGS fixed?)
		      Michael Delgadillo <delgadil@ymi.com>
		      Windows build support with lcc
		      Valentin Pavlov <v_valchev@prosyst.bg>
		      Windows build fixes with mingw (both need more code)
		      put enough support into win32 termios to allow BlackBox
		      to run but not work
		      BeOS opens and closes serial ports
		      hpux build fixes merged
		      merge with rxtx-1.4 fixes and features
		      backed out Vector port enumeration
		      Futher Documentation
1.5-3  Oct  4, 2000   Initial BeOS Support 
		      Brian D. Hindman <bjhindman@yahoo.com>
		      Win32 cross build fixes <jcbernard@free.fr>
		      Documentation changes D. Bahi <dbahi@tenornetworks.com>
		      Kaffe Support
		      freebsd build fixes
		      Makefile fixes
		      Merged changes from 1.4-5
1.5-2  Jul 16, 2000   Merged changes from 1.4-4
		      Added RawIO classes and read/write/open/close functions.
		      Jim Garvin <jgarvin@gardelsoftware.com>
1.5-1  Mar  7, 2000   RS485 write support.  comm.jar implemented.
		      Stallion Card support 
		      Greg Luck <gluck@tempo-services.com.au>
		      CommPort enumeration with rxtx's comm.jar
1.4-10 Aug 31, 2001   Follow symbolic links with lock files 
		      peter.beelen@philips.com
		      Configure.in fixes for permission issues
		      Vadim Tkachenko <vt@freehold.crocodile.org>
		      Closed memleaks on open()/close()
		      Joseph Goldstone <joseph@lp.com>
                      registered port support.
1.4-9  Jun 21, 2001   Steve Drach <drach@eng.sun.com>
                      Minor fix of error reporting in lockfiles
		      Mac OS X port Joseph Goldstone <joseph@lp.com>