@@ -1,0 +1,433 @@
+# Generated automatically from Makefile.in by configure.
+# Makefile.in generated automatically by automake 1.4 from Makefile.am
+
+# Copyright (C) 1994, 1995-8, 1999 Free Software Foundation, Inc.
+# This Makefile.in is free software; the Free Software Foundation
+# gives unlimited permission to copy and/or distribute it,
+# with or without modifications, as long as this notice is preserved.
+
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY, to the extent permitted by law; without
+# even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+# PARTICULAR PURPOSE.
+
+#-------------------------------------------------------------------------
+#   rxtx is a native interface to serial ports in java.
+#   Copyright 1997-2001 by Trent Jarvi trentjarvi@yahoo.com.
+#
+#   This library is free software; you can redistribute it and/or
+#   modify it under the terms of the GNU Library General Public
+#   License as published by the Free Software Foundation; either
+#   version 2 of the License, or (at your option) any later version.
+#
+#   This library is distributed in the hope that it will be useful,
+#   but WITHOUT ANY WARRANTY; without even the implied warranty of
+#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+#   Library General Public License for more details.
+#
+#   You should have received a copy of the GNU Library General Public
+#   License along with this library; if not, write to the Free
+#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#-------------------------------------------------------------------------
+
+
+SHELL = /bin/sh
+top_srcdir = .
+prefix = /usr/local
+exec_prefix = ${prefix}
+
+bindir = ${exec_prefix}/bin
+sbindir = ${exec_prefix}/sbin
+libexecdir = ${exec_prefix}/libexec
+datadir = ${prefix}/share
+sysconfdir = ${prefix}/etc
+sharedstatedir = ${prefix}/com
+localstatedir = ${prefix}/var
+libdir = ${exec_prefix}/lib
+infodir = ${prefix}/info
+mandir = ${prefix}/man
+includedir = ${prefix}/include
+oldincludedir = /usr/include
+
+DESTDIR =
+
+pkgdatadir = $(datadir)/Serial
+pkglibdir = $(libdir)/Serial
+pkgincludedir = $(includedir)/Serial
+
+top_builddir = .
+
+ACLOCAL = aclocal
+AUTOCONF = autoconf
+AUTOMAKE = automake
+AUTOHEADER = autoheader
+
+INSTALL = /usr/bin/install -c
+INSTALL_PROGRAM = ${INSTALL} $(AM_INSTALL_PROGRAM_FLAGS)
+INSTALL_DATA = ${INSTALL} -m 644
+INSTALL_SCRIPT = ${INSTALL_PROGRAM}
+transform = s,x,x,
+
+NORMAL_INSTALL = :
+PRE_INSTALL = :
+POST_INSTALL = :
+NORMAL_UNINSTALL = :
+PRE_UNINSTALL = :
+POST_UNINSTALL = :
+build_alias = powerpc-apple-darwin1.3.7
+build_triplet = powerpc-apple-darwin1.3.7
+host_alias = powerpc-apple-darwin1.3.7
+host_triplet = powerpc-apple-darwin1.3.7
+target_alias = powerpc-apple-darwin1.3.7
+target_triplet = powerpc-apple-darwin1.3.7
+AS = @AS@
+CATALOGS = @CATALOGS@
+CATOBJEXT = @CATOBJEXT@
+CC = cc
+CFLAGS = -g -O2 -D_BSD_SOURCE -bundle
+CLASSPATH = -classpath .:$(TOP):$(TOP)/src:$(JPATH)/lib/ext/comm.jar:.:
+DATADIRNAME = @DATADIRNAME@
+DLLTOOL = @DLLTOOL@
+EXTENSION = c
+GENCAT = @GENCAT@
+GMOFILES = @GMOFILES@
+GMSGFMT = @GMSGFMT@
+GT_NO = @GT_NO@
+GT_YES = @GT_YES@
+INCLUDE_LOCALE_H = @INCLUDE_LOCALE_H@
+INSTOBJEXT = @INSTOBJEXT@
+INTLDEPS = @INTLDEPS@
+INTLLIBS = @INTLLIBS@
+INTLOBJS = @INTLOBJS@
+JAR = $(JPATH)/bin/jar
+JAVAC = $(JPATH)/bin/javac $(CLASSPATH) -d $(TOP)/ -O
+JAVADOC = $(JPATH)/bin/javadoc
+JAVAH = $(JPATH)/bin/javah $(CLASSPATH) -d $(DEST) -jni
+JAVAH_FIX = 
+JAVAINCLUDE = -I $(JAVAINCLUDEDIR)
+JAVAINCLUDEDIR = /System/Library/Frameworks/JavaVM.framework/Versions/1.3.1/Home/../../../Headers
+JAVANATINC = -I $(JAVAINCLUDEDIR)/./
+JAVA_CLASS_PATH = 
+JAVA_CLASS_VERSION = 
+JAVA_HOME = 
+JAVA_LIBRARY_PATH = 
+JAVA_VENDOR = Apple Computer, Inc.
+JAVA_VERSION = 1.3.1
+JHOME = /System/Library/Frameworks/JavaVM.framework/Versions/1.3.1/Home/lib/ext
+JPATH = /System/Library/Frameworks/JavaVM.framework/Versions/1.3.1/Home
+LDFLAG = 
+LDFLAGS =  -module -framework JavaVM -framework IOKit -framework CoreFoundation
+LIBTOOL = $(SHELL) $(top_builddir)/libtool
+LIBTOOL_FIX = sed s/echo\ so/echo\ jnilib/g libtool > tmp; mv tmp libtool; chmod +x libtool;
+LN_S = ln -s
+MAKEINFO = /Volumes/Medon/Personal/joseph/Developer/RXTX/rxtx-1.5/merged/missing makeinfo
+MKINSTALLDIRS = @MKINSTALLDIRS@
+MSGFMT = @MSGFMT@
+OBJDUMP = @OBJDUMP@
+OS_ARCH = ppc
+OS_NAME = Mac OS X
+OS_VERSION = 1.3.7
+PACKAGE = Serial
+POFILES = @POFILES@
+POSUB = @POSUB@
+RANLIB = ranlib
+RXTX_PATH = /usr/lib/java
+TARGETLIB = $(target_alias)/libSerial.la
+THREAD_FLAG = 
+TOP = /Volumes/Medon/Personal/joseph/Developer/RXTX/rxtx-1.5/merged
+USE_INCLUDED_LIBINTL = @USE_INCLUDED_LIBINTL@
+USE_NLS = @USE_NLS@
+VERSION = 1.2.10
+WINDOWS_JAVA_INCLUDE = 
+l = @l@
+
+srcdir = .
+
+AUTOMAKE_OPTIONS = foreign
+INCLUDES = -I $(TOP) -I $(DEST) -I . $(JAVAINCLUDE) $(JAVANATINC)
+####################### vars for rxtx-1.4->1.5 transition
+JARTARGET = comm.jar
+CLASSDIR = javax.comm
+CLASSTOP = javax
+CLASSDEST = javax/comm
+####################### tools
+LIBTOOLC = $(TOP)/libtool --mode=compile $(CC) $(INCLUDES) $(CPPFLAGS) $(CFLAGS) $(VERBOSE_IOEXCEPTIONS) -c
+LIBTOOL_INST = $(TOP)/libtool --mode=install $(INSTALL_PROGRAM)
+LINK = $(TOP)/libtool --mode=link $(CC) $(CFLAGS) $(LDFLAGS) -version-info 1:0:1
+####################### dirs
+SPATH = $(srcdir)/src
+DEST = $(target_alias)
+####################### rules
+CLASSES = $(patsubst $(SPATH)/%.java,$(TOP)/$(CLASSDEST)/%.class,$(wildcard $(SPATH)/*.java))
+javafiles = $(wildcard $(SPATH)/*.java)
+javahfiles = $(patsubst $(SPATH)/%.java,%,$(wildcard $(SPATH)/*.java))
+#######################
+CLEANFILES = $(TOP)/*.class $(TOP)/$(CLASSDEST)/*.class $(TOP)/$(JARTARGET)
+ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
+mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
+CONFIG_HEADER = config.h
+CONFIG_CLEAN_FILES = 
+DIST_COMMON =  README ./stamp-h.in AUTHORS COPYING ChangeLog INSTALL \
+Makefile.am Makefile.in TODO acconfig.h acinclude.m4 aclocal.m4 \
+config.guess config.h.in config.sub configure configure.in install-sh \
+ltconfig ltmain.sh missing mkinstalldirs
+
+
+DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
+
+TAR = gnutar
+GZIP_ENV = --best
+all: all-redirect
+.SUFFIXES:
+$(srcdir)/Makefile.in: Makefile.am $(top_srcdir)/configure.in $(ACLOCAL_M4) 
+	cd $(top_srcdir) && $(AUTOMAKE) --foreign Makefile
+
+Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status $(BUILT_SOURCES)
+	cd $(top_builddir) \
+	  && CONFIG_FILES=$@ CONFIG_HEADERS= $(SHELL) ./config.status
+
+$(ACLOCAL_M4):  configure.in  acinclude.m4
+	cd $(srcdir) && $(ACLOCAL)
+
+config.status: $(srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
+	$(SHELL) ./config.status --recheck
+$(srcdir)/configure: $(srcdir)/configure.in $(ACLOCAL_M4) $(CONFIGURE_DEPENDENCIES)
+	cd $(srcdir) && $(AUTOCONF)
+
+config.h: stamp-h
+	@if test ! -f $@; then \
+		rm -f stamp-h; \
+		$(MAKE) stamp-h; \
+	else :; fi
+stamp-h: $(srcdir)/config.h.in $(top_builddir)/config.status
+	cd $(top_builddir) \
+	  && CONFIG_FILES= CONFIG_HEADERS=config.h \
+	     $(SHELL) ./config.status
+	@echo timestamp > stamp-h 2> /dev/null
+$(srcdir)/config.h.in: $(srcdir)/stamp-h.in
+	@if test ! -f $@; then \
+		rm -f $(srcdir)/stamp-h.in; \
+		$(MAKE) $(srcdir)/stamp-h.in; \
+	else :; fi
+$(srcdir)/stamp-h.in: $(top_srcdir)/configure.in $(ACLOCAL_M4) acconfig.h
+	cd $(top_srcdir) && $(AUTOHEADER)
+	@echo timestamp > $(srcdir)/stamp-h.in 2> /dev/null
+
+mostlyclean-hdr:
+
+clean-hdr:
+
+distclean-hdr:
+	-rm -f config.h
+
+maintainer-clean-hdr:
+tags: TAGS
+TAGS:
+
+
+distdir = $(PACKAGE)-$(VERSION)
+top_distdir = $(distdir)
+
+# This target untars the dist file and tries a VPATH configuration.  Then
+# it guarantees that the distribution is self-contained by making another
+# tarfile.
+distcheck: dist
+	-rm -rf $(distdir)
+	GZIP=$(GZIP_ENV) $(TAR) zxf $(distdir).tar.gz
+	mkdir $(distdir)/=build
+	mkdir $(distdir)/=inst
+	dc_install_base=`cd $(distdir)/=inst && pwd`; \
+	cd $(distdir)/=build \
+	  && ../configure --srcdir=.. --prefix=$$dc_install_base \
+	  && $(MAKE) $(AM_MAKEFLAGS) \
+	  && $(MAKE) $(AM_MAKEFLAGS) dvi \
+	  && $(MAKE) $(AM_MAKEFLAGS) check \
+	  && $(MAKE) $(AM_MAKEFLAGS) install \
+	  && $(MAKE) $(AM_MAKEFLAGS) installcheck \
+	  && $(MAKE) $(AM_MAKEFLAGS) dist
+	-rm -rf $(distdir)
+	@banner="$(distdir).tar.gz is ready for distribution"; \
+	dashes=`echo "$$banner" | sed s/./=/g`; \
+	echo "$$dashes"; \
+	echo "$$banner"; \
+	echo "$$dashes"
+dist: distdir
+	-chmod -R a+r $(distdir)
+	GZIP=$(GZIP_ENV) $(TAR) chozf $(distdir).tar.gz $(distdir)
+	-rm -rf $(distdir)
+dist-all: distdir
+	-chmod -R a+r $(distdir)
+	GZIP=$(GZIP_ENV) $(TAR) chozf $(distdir).tar.gz $(distdir)
+	-rm -rf $(distdir)
+distdir: $(DISTFILES)
+	-rm -rf $(distdir)
+	mkdir $(distdir)
+	-chmod 777 $(distdir)
+	here=`cd $(top_builddir) && pwd`; \
+	top_distdir=`cd $(distdir) && pwd`; \
+	distdir=`cd $(distdir) && pwd`; \
+	cd $(top_srcdir) \
+	  && $(AUTOMAKE) --include-deps --build-dir=$$here --srcdir-name=$(top_srcdir) --output-dir=$$top_distdir --foreign Makefile
+	@for file in $(DISTFILES); do \
+	  d=$(srcdir); \
+	  if test -d $$d/$$file; then \
+	    cp -pr $$/$$file $(distdir)/$$file; \
+	  else \
+	    test -f $(distdir)/$$file \
+	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
+	    || cp -p $$d/$$file $(distdir)/$$file || :; \
+	  fi; \
+	done
+info-am:
+info: info-am
+dvi-am:
+dvi: dvi-am
+check-am: all-am
+check: check-am
+installcheck-am:
+installcheck: installcheck-am
+all-recursive-am: config.h
+	$(MAKE) $(AM_MAKEFLAGS) all-recursive
+
+install-exec-am:
+install-exec: install-exec-am
+
+install-data-am:
+install-data: install-data-am
+
+install-am: all-am
+	@$(MAKE) $(AM_MAKEFLAGS) install-exec-am install-data-am
+install: install-am
+uninstall-am:
+uninstall: uninstall-am
+all-am: Makefile config.h
+all-redirect: all-am
+install-strip:
+	$(MAKE) $(AM_MAKEFLAGS) AM_INSTALL_PROGRAM_FLAGS=-s install
+installdirs:
+
+
+mostlyclean-generic:
+
+distclean-generic:
+	-rm -f Makefile $(CONFIG_CLEAN_FILES)
+	-rm -f config.cache config.log stamp-h stamp-h[0-9]*
+
+maintainer-clean-generic:
+mostlyclean-am:  mostlyclean-hdr mostlyclean-generic
+
+mostlyclean: mostlyclean-am
+
+clean-am:  clean-hdr clean-generic mostlyclean-am
+
+clean: clean-am
+
+distclean-am:  distclean-hdr distclean-generic clean-am
+	-rm -f libtool
+
+distclean: distclean-am
+	-rm -f config.status
+
+maintainer-clean-am:  maintainer-clean-hdr maintainer-clean-generic \
+		distclean-am
+	@echo "This command is intended for maintainers to use;"
+	@echo "it deletes files that may require special tools to rebuild."
+
+maintainer-clean: maintainer-clean-am
+	-rm -f config.status
+
+.PHONY: mostlyclean-hdr distclean-hdr clean-hdr maintainer-clean-hdr \
+tags distdir info-am info dvi-am dvi check check-am installcheck-am \
+installcheck all-recursive-am install-exec-am install-exec \
+install-data-am install-data install-am install uninstall-am uninstall \
+all-redirect all-am all installdirs mostlyclean-generic \
+distclean-generic clean-generic maintainer-clean-generic clean \
+mostlyclean distclean maintainer-clean
+
+
+#  compile src/SerialImp.c and similar files into libraries.
+#  LIBTOOL_FIX handles problems encountered on some OS's.  See configure.in
+#  If a LIBTOOL_FIX is added be sure to provide a trailing ';' in configure.in
+
+# The stuff below tries to do this without running into the link problems
+#		$(LINK) -o lib$*.la -rpath $(RXTX_PATH)		\
+#			$(TOP)/$(DEST)/$*Imp.lo $(TOP)/$(DEST)/fuserImp.lo; \
+
+$(target_alias)/lib%.la: $(SPATH)/%Imp.c $(CLASSES) $(SPATH)/%Imp.h
+	@(							\
+	$(LIBTOOL_FIX)						\
+	cd $(DEST); 						\
+        touch it1; \
+	$(LIBTOOLC) ../$(SPATH)/$*Imp.c -o $(TOP)/$(DEST)/$*Imp.lo; \
+        touch it2; \
+	if [ "$*" = "Serial" ]; then 				\
+		$(LIBTOOLC) ../$(SPATH)/fuserImp.c		\
+			-o $(TOP)/$(DEST)/fuserImp.lo;		\
+		mkdir -p $(TOP)/$(DEST)/.libs;			\
+		cc -bundle -undefined warning                   \
+		-o .libs/libSerial.jnilib                    \
+		$(TOP)/$(DEST)/SerialImp.lo                  \
+		$(TOP)/$(DEST)/fuserImp.lo                   \
+		-framework JavaVM -framework IOKit;          \
+		echo "# libSerial.la - a libtool library file" > $(TOP)/$(DEST)/libSerial.la; \
+		echo "# libSerial.la - a libtool library file" > $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		echo "# Generated by ltmain.sh - GNU libtool 1.3.5 (1.3 2000/11/22 00:47:10)" >> $(TOP)/$(DEST)/libSerial.la; \
+		echo "# Generated by ltmain.sh - GNU libtool 1.3.5 (1.3 2000/11/22 00:47:10)" >> $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		echo "dlname='libSerial.jnilib'"        >> $(TOP)/$(DEST)/libSerial.la; \
+		echo "dlname='libSerial.jnilib'"        >> $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		echo "library_names='libSerial.jnilib'" >> $(TOP)/$(DEST)/libSerial.la; \
+		echo "library_names='libSerial.jnilib'" >> $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		echo "old_library=''"                   >> $(TOP)/$(DEST)/libSerial.la; \
+		echo "old_library=''"                   >> $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		echo "dependency_libs=''"               >> $(TOP)/$(DEST)/libSerial.la; \
+		echo "dependency_libs=''"               >> $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		echo "current=1"                        >> $(TOP)/$(DEST)/libSerial.la; \
+		echo "current=1"                        >> $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		echo "age=1"                            >> $(TOP)/$(DEST)/libSerial.la; \
+		echo "age=1"                            >> $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		echo "revision=0"                       >> $(TOP)/$(DEST)/libSerial.la; \
+		echo "revision=0"                       >> $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		echo "installed=yes"                    >> $(TOP)/$(DEST)/libSerial.la; \
+		echo "installed=yes"                    >> $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		echo "libdir='/usr/lib/java'"           >> $(TOP)/$(DEST)/libSerial.la; \
+		echo "libdir='/usr/lib/java'"           >> $(TOP)/$(DEST)/.libs/libSerial.lai; \
+		(cd .libs && rm -f libSerial.la && ln -s ../libSerial.la libSerial.la); \
+	else							\
+		$(LINK) -o lib$*.la -rpath $(RXTX_PATH)		\
+			$(TOP)/$(DEST)/$*Imp.lo $(FUSER);	\
+	fi;							\
+	)
+
+#  compile src/RXTXPort.java and similar files into classes
+#  then create the .jar file
+$(CLASSES): $(javafiles) $(TOP)/Makefile
+	$(JAVAH_FIX)
+	$(JAVAC) $(javafiles)
+	@$(JAVAH) `(for i in $(javahfiles);do \
+		if grep -q native.*\( $(SPATH)/$$i.java; then \
+			echo $(CLASSDIR).$$i; \
+		fi; \
+	done)`
+	$(JAR) cf $(JARTARGET) $(CLASSTOP)/*
+
+#  install libSerial.so into the proper directory and copy $(JARTARGET) to its
+#  proper location
+install: all
+	@$(LIBTOOL_INST) \
+	`for i in $(TARGETLIB);do \
+		if [ -f $$i ];then \
+			echo $$i; \
+		fi; \
+	done` $(RXTX_PATH)
+	$(INSTALL_PROGRAM) $(JARTARGET) $(JHOME)/
+
+clean-generic:
+	rm -rf $(DEST) $(TOP)/$(CLASSTOP)
+	-test -z "$(CLEANFILES)" || rm -f $(CLEANFILES)
+
+all: $(TARGETLIB)
+
+#  create the javadoc files.
+docs: $(CLASSES)
+	$(JAVADOC) $(javafiles)
+
